--- a/.github/workflows/docker-workshop.yml
+++ b/.github/workflows/docker-workshop.yml
@@ -1,61 +1,39 @@
-name: Docker Workshop Automation
-
-on:
-  push:
-    branches: [ "main" ]
-  workflow_dispatch:
+name: Docker Automation
+on: workflow_dispatch
 
 jobs:
-  docker-workshop:
+  build:
     runs-on: self-hosted
     steps:
-      # Step 1: Checkout code
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4.2.2
+        
+      - name: Docker Login, build
+        run: |
+          echo "SHORT_SHA=$(echo ${GITHUB_SHA} | cut -c1-7)" >> $GITHUB_ENV
+          echo "${{ secrets.DOCKER_PASSWORD }}" | sudo docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+          sudo docker build -t ${{ secrets.DOCKER_USERNAME }}/getting-started:latest .
+          sudo docker push ${{ secrets.DOCKER_USERNAME }}/getting-started
 
-      # Step 2: Docker Login
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
+      - name: Set AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4.1.0
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-      # Step 3: Build Docker image
-      - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/hcl_training:latest .
-      
-      # Step 4: Push to Docker Hub
-      - name: Push to Docker Hub
-        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/hcl_training:latest
-
-      # # Step 5: Pull image (just to demonstrate)
-      # - name: Pull image
-      #   run: docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/hcl_training:latest
-
-      # # Step 6: Run container with volume mount (persistent db)
-      # - name: Run container with volume
-      #   run: |
-      #     docker volume create workshop-data
-      #     docker run -d --name workshop-app -p 8000:8000 -v workshop-data:/data ${{ secrets.DOCKER_HUB_USERNAME }}/hcl_training:latest
-
-      # # Step 7: Run container with bind mount
-      # - name: Run container with bind mount
-      #   run: |
-      #     mkdir -p ./local-data
-      #     docker run -d --name workshop-app-bind -p 8001:8000 -v $(pwd)/local-data:/data ${{ secrets.DOCKER_HUB_USERNAME }}/hcl_training:latest
-
-      # # Step 8: Docker Compose
-      # - name: Start with Docker Compose
-      #   run: |
-      #     echo 'version: "3.8"
-      #     services:
-      #       app:
-      #         image: ${{ secrets.DOCKER_HUB_USERNAME }}/hcl_training:latest
-      #         ports:
-      #           - "8002:8000"
-      #         volumes:
-      #           - workshop-data:/data
-      #           - ./local-data:/bind-data
-      #     volumes:
-      #       workshop-data:' > docker-compose.yml
-      #     docker-compose up -d
+      - name: AWS ECR Push
+        run: |
+          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | sudo docker login --username AWS --password-stdin 427521931204.dkr.ecr.ap-south-1.amazonaws.com
+          sudo docker build -t getting-started .
+          sudo docker tag getting-started:latest 427521931204.dkr.ecr.ap-south-1.amazonaws.com/getting-started:latest
+          sudo docker push 427521931204.dkr.ecr.ap-south-1.amazonaws.com/getting-started:latest
+    
+  deploy:
+    needs: build
+    runs-on: self-hosted
+    steps:
+      - name: Compose up
+        run: |
+          sudo docker compose up -d
+          sudo docker ps
