--- a/.github/workflows/docker-workshop.yml
+++ b/.github/workflows/docker-workshop.yml
@@ -24,10 +24,9 @@ jobs:
 
       - name: AWS ECR Push
         run: |
-          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | sudo docker login --username AWS --password-stdin 012889719104.dkr.ecr.us-east-1.amazonaws.com/hcl/getting-started
-          sudo docker build -t getting-started .
+          aws ecr get-login-password --region us-east-1 | sudo docker login --username AWS --password-stdin 012889719104.dkr.ecr.us-east-1.amazonaws.com
           sudo docker tag getting-started:latest 012889719104.dkr.ecr.us-east-1.amazonaws.com/hcl/getting-started
-          sudo docker push 012889719104.dkr.ecr.us-east-1.amazonaws.com/hcl/getting-started:latest
+          sudo docker push 012889719104.dkr.ecr.us-east-1.amazonaws.com/hcl/getting-started
     
   deploy:
     needs: build
